welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: not found: value num
		if (nums(i)==num(i+1) && nums(i)==nums(i+2)) {x=false}	
                             ^