welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	var x:Boolean = true
	for (i <- 0 to nums.length-3) {
		if (nums(i)==num(i+1) && nums(i)==nums(i+2)) {x=false}	
	}
	return x
}
